# uvr-headless-runner

./: .dockerignore  .gitattributes  .gitignore  DOCKER_README.md  DOCKER_README_CN.md  LICENSE  PROGRESS.md  README.md  README_CN.md  demucs_headless_runner.py  mdx_headless_runner.py  model_downloader.py  progress.py  pyproject.toml  requirements.txt  separate.py  vr_headless_runner.py
.github/workflows/: docker-publish.yml  pypi-publish.yml
.model_cache/: download_checks.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  install.bat  install.ps1  install.sh  requirements-gpu-extra.txt  requirements-hashed.txt
docker/scripts/: fetch_pytorch_hashes.py  generate_hashed_requirements.py
gui_data/: app_size_values.py
lib_v5/: bs_roformer.py  mel_band_roformer.py
